# libfat

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
doxygen/: README.md
include/: fatfs.h
include/fat/: config.h  dir.h  disk.h  error.h  fat.h  file-info.h  file.h  fs.h  host.h  integer.h  object-info.h  superblock.h  tchar.h  time.h  types.h
include/fatfs/: disk.h  fs.h  types.h
lib/: CMakeLists.txt  decode.c  decode.h  disk.c  diskio.c  diskio.h  encode.c  encode.h  error.c  fatfs.c  fdisk.c  ffsystem.c  ffunicode.c  host.c  string.c  string.h
misc/: stamp.h
source/: diskio.c  diskio.h  fatfs.c  ffsystem.c  ffunicode.c
travis-ci/: build.sh
util/: CMakeLists.txt  arg-iterator.c  arg-iterator.h  common-opts.h  fdisk.c  fdisk.h  list.c  list.h  main.c  mkdir.c  mkdir.h  mkfs.c  mkfs.h  time.c
